--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -85,6 +85,7 @@
     align-items: center;
     aspect-ratio: 1 / 1;
     height: 100%;
+
 }
 
 .square {
@@ -233,7 +234,6 @@
         min-height: 300px;
         max-height: none;
         aspect-ratio: unset;
-        padding-bottom: 4rem; /* space before footer */
     }
 
     .info {
@@ -292,12 +292,16 @@
 
 /*-------------- mobile styles --------------*/
 @media screen and (max-width: 767px) {
+
+    .main {
+        padding-bottom: 0; 
+    }
     .center-column {
         width: 85vw;
         height: 85vw;
         max-width: 500px;
         max-height: 500px;
-        margin-top: 2rem;
+        margin-top: 4rem;
         order: 1;
     }
 
@@ -312,6 +316,7 @@
         align-content: start;
         width: 85vw;
         max-width: 500px;
+        margin-top: 5rem;
         align-self: center;
         order: 2;
         gap: 1rem;
